@@ -5,15 +5,21 @@
 $data = array();
 $op_banners = cs_sql_option(__FILE__,'banners');
 
+$where = "banners_id != '" . $op_banners['last_id'] . "'";
+$cat_where = '';
+
 if(!empty($_GET['cat_id'])) {
   $cat_id = (int) $_GET['cat_id'];
-  $where = "categories_id = '" . $cat_id . "' AND banners_id != '" . $op_banners['last_id'] . "'";
-}
-else {
-  $where = "banners_id != '" . $op_banners['last_id'] . "'";
+  $cat_where = "categories_id = '" . $cat_id . "'";
+  $where .= ' AND ' . $cat_where;
 }
 
-$cs_banners = cs_sql_select(__FILE__,'banners','banners_id, banners_picture, banners_alt, banners_url, categories_id',$where,'{random}',0,1);
+$cs_count = cs_sql_count(__FILE__, 'banners', $where);
+if($cs_count == 0)
+    $where = $cat_where;
+
+$columns = 'banners_id, banners_picture, banners_alt, banners_url, categories_id';
+$cs_banners = cs_sql_select(__FILE__, 'banners', $columns, $where, '{random}', 0, 1);
 
 if(empty($cs_banners)) {
   
