@@ -10,6 +10,7 @@ ___________________________________________________________
 -> Added board repair page to fix thread metadata issues (hajo)
    Also helps to fix wrong data if your initial ClanSphere version is older than 2011
 -> Added currency name option to cash module (hajo)
+-> Fixed banners rotation not working when only one banner is found (hajo)
 -> Fixed boardvotes not usable on different accounts due to same ip (tom08)
 -> Fixed votes navlist random sort not used with mysqli database extension (hajo)
 
